# exactypes

./: README.md  cliff.toml  pyproject.toml
.github/workflows/: python-staticcheck.yml
exactypes/: __init__.py  array.py  exceptions.py  types.py
exactypes/cdataobject/: __init__.py  datafield.py  refsolver.py
exactypes/cfuncs/: __init__.py  argtypes.py  cfunc.py  restype.py
exactypes/genstub/: __init__.py  _preset_field_types.py  exa.py  std.py
exactypes/hazmat/: array.py
examples/: array_1.py  array_2.py  cfunctype_1.py  cfunctype_2.py  cfunctype_3.py  cstruct_1.py  cstruct_2.py  cstruct_3.py  cstruct_4.py  cstruct_5.py  cstruct_6.py  stubgen_1.py
examples/test_utils/: __init__.py
