[project]
name = "exactypes"
version = "0.1.0"
description = "Helps creating typed ctypes-based python library"
authors = [
    {name = "HivertMoZara", email = "worldmozara@163.com"},
]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/NCBM/exactypes"
Repository = "https://github.com/NCBM/exactypes"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
